4.Introducing-Network-Policies/monitoring/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
  - Ingress
  ingress:
  # Allow grafana to reach Prometheus
  - from:
    - namespaceSelector:
        matchLabels:
          tier: observability
    ports:
    - protocol: TCP
      port: 9090
